Adiciona dashboard para um docente

--- a/app/views/pages/calendar.slim
+++ b/app/views/pages/calendar.slim
@@ -2,7 +2,7 @@
   = stylesheet_link_tag 'fullcalendar.css'
   = stylesheet_link_tag 'endless.min.css'
 = render "shared/navbar"
-= render "shared/sidebar", user: @user
+= render "shared/sidebar", user: @user, active: "calendar"
 
 #main-container
   .padding-md
