--- a/app/views/pages/dashboard.slim
+++ b/app/views/pages/dashboard.slim
@@ -2,8 +2,8 @@
 = render "shared/sidebar", user: @user
 
 #main-container
-  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type.capitalize}",link: "#"}]
-  = render "shared/dashboard/header", header: "Painel do #{@user.type.capitalize}"
+  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type_pt.capitalize}",link: "#"}]
+  = render "shared/dashboard/header", header: "Painel do #{@user.type_pt.capitalize}"
   
   .padding-md   
     .row
@@ -11,12 +11,14 @@
         = render "shared/messages" 
     .row
       .col-md-8 
-        = render "projects/simple_widget", title: "Projetos a decorrer", projects: @projects.active_projects, type: "active"
-        = render "projects/simple_widget", title: "Próximos projetos", projects: @projects.upcoming_projects, type: "upcoming"
-        = render "projects/simple_widget", title: "Últimos projetos", projects: @projects.latest_projects, type: "latest"                               
+        - if @user.teacher?
+          = render "projects/simple_widget", title: "Projetos a aguardar publicação", projects: @projects.not_opened_projects, mode: "not_opened", type: @user.type
+        = render "projects/simple_widget", title: "Projetos a decorrer", projects: @projects.active_projects, mode: "active", type: @user.type
+        = render "projects/simple_widget", title: "Próximos projetos", projects: @projects.upcoming_projects, mode: "upcoming", type: @user.type
+        = render "projects/simple_widget", title: "Últimos projetos", projects: @projects.latest_projects, mode: "latest", type: @user.type                               
 
       .col-md-4
+        - if @user.teacher?
+          = render "pages/dashboard/teacher_utilities"
         = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
-
-      .col-md-4 
         = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, student: @user
