--- a/app/views/projects/_simple_widget.slim
+++ b/app/views/projects/_simple_widget.slim
@@ -5,4 +5,4 @@
       - if projects.empty?
         = render "projects/simple_widget/empty"
       - else
-        = render "projects/simple_widget/index", projects: projects, type: type
+        = render "projects/simple_widget/index", projects: projects, type: type, mode: mode
