--- a/app/views/projects/show.slim
+++ b/app/views/projects/show.slim
@@ -2,7 +2,7 @@
 = render "shared/sidebar", user: @user
 
 #main-container
-  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type.capitalize}",link: dashboard_path},{name:"#{@project.name}", link:"#"}]
+  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type_pt.capitalize}",link: dashboard_path},{name:"#{@project.name}", link:"#"}]
   = render "shared/dashboard/header", header: @project.name
 
   .padding-md
