--- a/app/views/projects/simple_widget/_show_active.slim
+++ b/app/views/projects/simple_widget/_show_active.slim
@@ -18,11 +18,29 @@
               i.fa.fa-clock-o  
                 b  Próxima entrega: 
                 = date_or_undef project.next_delivery
-          .col-md-5
-            small.text-muted
-              i.fa.fa-tasks  
-                b  Progresso:
-            .progress.progress-striped.active style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
-              .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
-                span.sr-only 66% Complete     
-            small.text-muted #{project.next_phase_nr-1}/#{project.phases_nr} fases concluidas
+          - if type=="student"
+            .col-md-5
+              small.text-muted
+                i.fa.fa-tasks  
+                  b  Progresso:
+              .progress.progress-striped style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
+                .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
+              small.text-muted #{project.next_phase_nr-1}/#{project.phases_nr} fases concluidas
+          - else
+            .col-md-3
+              small.text-muted
+                i.fa.fa-tasks  
+                  b  Progresso:
+              .progress.progress-striped style="width: 25%; height:8px; margin:0 10px 0 10px; display:inline-block;"
+                .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
+              small.text-muted Fase #{project.next_phase_nr}/#{project.phases_nr}
+            .col-md-2
+              small.text-muted
+                i.fa.fa-pencil-square-o  
+                  b  Avaliações: 
+                  - if project.pending_grades?
+                    span.badge.badge-warning style="padding: 3px;font-size: 8px;"
+                      i.fa.fa-warning   
+                  - else
+                    span.badge.badge-success style="padding: 3px;font-size: 8px;"
+                      i.fa.fa-check    
