--- a/app/views/projects/simple_widget/_show_upcoming.slim
+++ b/app/views/projects/simple_widget/_show_upcoming.slim
@@ -2,7 +2,7 @@
   li.list-group-item.clearfix
     .row-widget
       .icon-widget
-        .activity-icon.small class="bg-default"
+        .activity-icon.small class="bg-primary"
           i.fa.fa-file
       .info-widget
         .row
@@ -13,12 +13,12 @@
               i.fa.fa-folder-open-o   
                 b  UC:  
                 = project.subject.name
-          .col-md-4
+          .col-md-3
             small.text-muted
               i.fa.fa-clock-o  
                 b  Data início: 
                 = date_or_undef project.begin_date
-          .col-md-4
+          .col-md-5
             small.text-muted
               i.fa.fa-clock-o 
                 b  Primeira entrega: 
