--- a/app/views/deliveries/simple_widget/_empty.slim
+++ b/app/views/deliveries/simple_widget/_empty.slim
@@ -1,4 +1,4 @@
 - if mode=="phase"
-  li.list-group-item.clearfix O seu grupo de trabalho ainda não efetuou nenhuma entrega para esta fase.
+  li.list-group-item.clearfix Não foi efetuada nenhuma entrega para esta fase.
 - else  
-  li.list-group-item.clearfix O seu grupo de trabalho ainda não efetuou nenhuma entrega para este projeto.
+  li.list-group-item.clearfix Não foi efetuada nenhuma entrega para este projeto.
