--- a/app/views/deliveries/simple_widget/_index.slim
+++ b/app/views/deliveries/simple_widget/_index.slim
@@ -1,2 +1,2 @@
 - deliveries.each do |delivery|
-  = render "deliveries/simple_widget/show", delivery: delivery, mode: mode
+  = render "deliveries/simple_widget/show", delivery: delivery, mode: mode, type: type
