--- a/app/views/pages/dashboard/_teacher_utilities.slim
+++ b/app/views/pages/dashboard/_teacher_utilities.slim
@@ -2,7 +2,7 @@
   .row.project-utilities
     = link_to new_project_path
       .col-md-12
-        .panel-stat3.bg-info
+        .panel-stat3.bg-primary
           h5 Criar novo projeto
           .stat-icon
             i.fa.fa-file.fa-2x
