--- a/app/views/phases/timeline_widget/_index.slim
+++ b/app/views/phases/timeline_widget/_index.slim
@@ -1,2 +1,2 @@
 - phases.each do |phase|
-  = render "phases/timeline_widget/show", phase: phase
+  = render "phases/timeline_widget/show", phase: phase, type: type
