--- a/app/views/teachers/simple_widget/_show.slim
+++ b/app/views/teachers/simple_widget/_show.slim
@@ -2,6 +2,6 @@ li.list-group-item.clearfix
   .clearfix
     .pull-left.m-right-sm
       img.img-circle alt="Teacher avatar" src="#{teacher.avatar.url}" style="width:40px;height:40px;"
-    .block #{teacher.name}
+    strong.block #{teacher.name}
     small.text-muted 
       i.fa.fa-envelope-o  #{teacher.email}
