--- a/app/views/phases/_timeline_widget.slim
+++ b/app/views/phases/_timeline_widget.slim
@@ -1,10 +1,16 @@
 .panel.panel-default.fadeInDown.animation-delay2
-  .panel-heading #{title}
+  .panel-heading 
+    = title
+    - if type=="teacher"
+      .pull-right
+        .btn.btn-xs
+          i.fa.fa-plus  Adicionar nova fase ao projeto
+
   - if phases.empty?
     = render "phases/timeline_widget/empty"        
   - else
     .panel-body
       .timeline-wrapper
         = render "phases/timeline_widget/begin", project: project
-        = render "phases/timeline_widget/index", phases: phases
+        = render "phases/timeline_widget/index", phases: phases, type: type
         = render "phases/timeline_widget/end", project: project
