--- a/app/views/teachers/_simple_widget.slim
+++ b/app/views/teachers/_simple_widget.slim
@@ -1,10 +1,10 @@
 .panel.panel-default.fadeInDown.animation-delay2
   .panel-heading 
     = title
-    / - if type == "teacher"
-    /   .pull-right 
-    /       = link_to project_teachers_path project
-    /         .btn.btn-info.btn-xs Gerir grupos
+    - if type == "teacher"
+      .pull-right 
+          .btn.btn-xs 
+            i.fa.fa-cogs  Gerir docentes
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       - if teachers.blank?
