--- a/app/views/layouts/_head.slim
+++ b/app/views/layouts/_head.slim
@@ -2,7 +2,7 @@ head
   meta charset="utf-8"
   = render 'layouts/meta'
 
-  = favicon_link_tag 'favicon.png'
+  = favicon_link_tag 'favicon.png', type: 'image/png'
   meta name="viewport" content="width=device-width, initial-scale=1.0"
 
   title= content_for?(:title) ? yield(:title) : t('title.simple')
