--- a/app/views/phases/_accordion_widget.slim
+++ b/app/views/phases/_accordion_widget.slim
@@ -1,5 +1,6 @@
+- mode ||= "default"
 #accordion.panel-group.fadeInDown.animation-delay2
   - if phases.empty?
     = render "phases/accordion_widget/empty"
   - else
-    = render "phases/accordion_widget/index", phases: phases, current_phase: current_phase, group: group
+    = render "phases/accordion_widget/index", phases: phases, current_phase: current_phase, group: group, type: type, mode: mode
