--- a/app/views/phases/accordion_widget/_index.slim
+++ b/app/views/phases/accordion_widget/_index.slim
@@ -1,3 +1,3 @@
 .dd-list
   - phases.each do |phase|
-    = render "phases/accordion_widget/show", phase: phase, current_phase: current_phase, group: group
+    = render "phases/accordion_widget/show", phase: phase, current_phase: current_phase, group: group, type: type, mode: mode
