--- a/app/views/required_files/_line_widget.slim
+++ b/app/views/required_files/_line_widget.slim
@@ -1,6 +1,11 @@
 .panel.panel-default.fadeInDown.animation-delay1
   .panel-heading 
     = title
+    - if type=="teacher"
+      .pull-right
+        .btn.btn-xs
+          i.fa.fa-cogs  Gerir ficheiros obrigatórios
+
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       li.list-group-item.clearfix
