Página de uma entrega para um professor

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -14,3 +14,5 @@
 @import "dropzone/dropzone.css"
 @import "endless.min.css"
 @import "chosen/chosen.min.css"
+@import "highlight/default.css"
+@import "highlight/googlecode.css"
