Form de atualização das avaliações de um grupo numa entrega

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -32,3 +32,17 @@ a:-webkit-any-link
   th,td
     text-align: center
     vertical-align: middle
+
+.submit-grades
+  border: none
+  width: 100%
+  background: none
+  text-align: left
+  height: auto
+  
+  &:active
+    outline: 0
+  &:hover
+    outline: 0
+  &:focus
+    outline: 0
