--- a/app/views/grades/evaluate_group/_actions.slim
+++ b/app/views/grades/evaluate_group/_actions.slim
@@ -1,7 +1,8 @@
-.fadeInDown.animation-delay2
-  .row.project-utilities 
-    .col-md-12
-      .panel-stat3.bg-primary style="padding: 0px 10px"
-        h5 Atualizar avaliação 
-        .stat-icon style="top: -4px;"
-          i.fa.fa-check 
+button.submit-grades type="submit"
+  .fadeInDown.animation-delay1
+    .row.project-utilities 
+      .col-md-12
+        .panel-stat3.bg-primary style="padding: 0px 10px; margin: 0"
+          h5 Atualizar avaliação 
+          .stat-icon style="top: -4px;"
+            i.fa.fa-check 
