--- a/app/views/pages/calendar.slim
+++ b/app/views/pages/calendar.slim
@@ -1,6 +1,6 @@
 - content_for :stylesheets do
   = stylesheet_link_tag 'fullcalendar.css'
-  = stylesheet_link_tag 'endless.min.css'
+  = stylesheet_link_tag 'endless.css'
 = render "shared/navbar"
 = render "shared/sidebar", user: @user, active: "calendar"
 
