Adicionado labels nas notas de um aluno

--- a/app/views/grades/show.slim
+++ b/app/views/grades/show.slim
@@ -9,4 +9,4 @@
   .padding-md
     .row
       .col-md-12
-        = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, mode: mode
+        = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, mode: mode, student: @user
