--- a/app/views/subjects/accordion_widget/_show_accordion.slim
+++ b/app/views/subjects/accordion_widget/_show_accordion.slim
@@ -1,4 +1,4 @@
-.panel-heading
+.panel-heading style="padding-left:35px;"
   #{subject.name}
 = render "projects/simple_widget/index_list", projects: subject.projects.sort_by{:begin_date}
 
