--- a/app/views/academic_years/accordion_widget/_show.slim
+++ b/app/views/academic_years/accordion_widget/_show.slim
@@ -9,8 +9,7 @@
         - if subjects.where(academic_year: academic_year).empty?
           = render "subjects/accordion_widget/empty"
         - else
-          - case mode
-          - when "normal"
-            = render "subjects/accordion_widget/index", subjects: subjects.where(academic_year: academic_year), student: student
-          - when "grades"
+          - if mode == "grades"
             = render "subjects/accordion_widget/index_accordion", subjects: subjects.where(academic_year: academic_year)
+          - else
+            = render "subjects/accordion_widget/index", subjects: subjects.where(academic_year: academic_year), student: student, mode: mode
