--- a/app/views/projects/simple_widget/_show_list.slim
+++ b/app/views/projects/simple_widget/_show_list.slim
@@ -1,18 +1,25 @@
 .row-widget
+	.icon-widget
 	.info-widget
 		.row
 			.col-md-8
 				i.fa.fa-folder-open-o
 					= project.name
-			.col-md-4
-					b  Avaliação:
-	                - if project.grades
-	                  b.text-success #{project.grade current_user.student.id}
-	                - else
-	                  b.text-warning ?
-	                | / 20.0 Valores
-		= render "phases/simple_widget/index", phases: project.phases.sort
+			.col-md-4 style="font-size: 1.3em;"
+				- if project.grades
+					- nota = project.grade current_user.student.id
+					- if nota < 9.5
+						.label.label-danger #{"#{nota}/20.0 Valores "}
+					- else
+						.label.label-success #{"#{nota}/20.0 Valores "}
+				- else
+					.label.label-warning
+						i.fa.fa-spinner Aguarda avaliação
 
+
+
+		= render "phases/simple_widget/index", phases: project.phases.sort
+br
 
 
 
