Form de informações na criação de um projeto

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,3 +16,4 @@
 @import "chosen/chosen.min.css"
 @import "highlight/default.css"
 @import "highlight/googlecode.css"
+@import "bootstrap-wysihtml5.css"
