--- a/app/views/shared/_navbar.slim
+++ b/app/views/shared/_navbar.slim
@@ -1,4 +1,4 @@
-#top-nav.fixed.skin-6
+#top-nav.fixed.skin-6 style="z-index: 1000;"
   a.brand href="#{root_path}"
     span Gere
     span.text-toggle TPs
