--- a/app/views/pages/dashboard/_teacher_utilities.slim
+++ b/app/views/pages/dashboard/_teacher_utilities.slim
@@ -1,8 +1,9 @@
 .fadeInDown.animation-delay2
   .row.project-utilities
-    = link_to new_project_path
+    a href="#CreateProject" role="button" data-toggle="modal"
       .col-md-12
         .panel-stat3.bg-primary
           h5 Criar novo projeto
           .stat-icon
             i.fa.fa-file.fa-2x
+= render "projects/modal_new", project: project
